client/css/linkedtv.css
html, body {
    height:100%;
    font-family: 'Roboto', sans-serif;
    font-weight: normal;
    font-size: 12px;
    background-color: rgb(45,57,64);
}
.linkedtv h1,
.linkedtv h2,
.linkedtv h3,
.linkedtv h4,
.linkedtv h5 {
    font-family: 'Roboto', sans-serif;
}
.linkedtv .bar h1,
.linkedtv .bar .icon {
    color: white;
}

.linkedtv .tab-item-active .icon,
.linkedtv .tab-item-active .tab-title,
.linkedtv .tab-item-active,
.linkedtv .icon.selected {
    color: rgb(65,146,183);
}

a {
  text-decoration: none;
  color: rgb(65,146,183);
}

.linkedtv .bar {
  background-color: rgba(95,109,105,0.6);
  z-index: 13;
  /*z-index: 2147483647; *//* http://css-tricks.com/custom-controls-in-html5-video-full-screen/ */
}
.linkedtv .bar-header {
  border-bottom: 1px solid rgb(100,114,124);
}
.linkedtv .tabs,
.linkedtv .bar-footer {
  border-top: 1px solid rgb(100,114,124);
}
.linkedtv-logo {
  background-image: url('../img/linkedtv_logo.png');
  background-repeat: no-repeat;
  background-position: 10px center;
  background-size: 184px 20px;
}
.tabs {
    background-color: rgba(95,109,105,0.8);
    padding: 0;
}
.culture .logo,
.culture .logo .tabs {
  background-image: url('../img/logo_avrotros.png');
  background-repeat: no-repeat;
  background-position: 15px center;
  background-size: 105px 34px;
}
.news .logo,
.news .logo .tabs {
  background-image: url('../img/rbb.png');
  background-repeat: no-repeat;
  background-position: 15px center;
  background-size: 89px 50px;
}
.tabs a {
  color: #FFF;
}
.pane {
  background-color: rgb(45,57,64);
}
.tabs-icon-top .has-footer {
  bottom: 49px;
}
.row {
  padding: 0;
}
.col {
  padding: 0;
}

.linkedtv .menu {
    background-color: rgb(45,57,64);
    width: 200px;
}

.linkedtv .view {
    background-color: rgb(45,57,64);
}

/* watch mode header and footer are overlays */
.linkedtv .watch .has-header.has-footer {
    top: 0;
    bottom: 0;
}
.linkedtv .watch .bar,
.linkedtv .watch .tabs {
    background-color: rgba(95, 109, 105, 0.9);
}

/* user select */
.user.card {
  float: left;
  width: 250px;
  box-shadow: 3px 3px 8px 0px rgba(26,26,26,0.7);
}
.user.card .item {  
  background: -webkit-linear-gradient(top, rgba(45,57,64,1) 0%,rgba(45,57,64,1) 50%,rgba(50,62,71,1) 100%);
  border: 1px solid rgb(100,114,124);
}
.user.card .item-image {
  height: 250px;
  width: 250px;
  overflow: hidden;
}
.user.card .item-image img {
  background-color: black;
}
.user.card .item h2,
.user.card .item a {
  color: white;
}

/* chapter */

.chapter .bookmark {
  position: absolute;
  display: block;
}
.chapter .bookmark.selected {
  color: rgb(65,146,183);
}
.chapter .chapter-time {
    position: absolute;
    right: 2px;
    bottom: 2px;
    padding: 0 4px;
    font-weight: bold;
    font-size: 11px;
    background-color: #000;
    color: #fff;
    height: 14px;
    line-height: 14px;
    opacity: .75;
}
.related .bookmark,
.episode .bookmark,
.bookmarks .bookmark {
  display: none;
}
.related .bookmark.selected,
.episode .bookmark.selected {
  display: block;
}
.chapter .desc {
  display :none;
}
.chapter .star {
  position: absolute;
  top: 45px;
  margin-left: 110px;
  color: rgb(65,146,183);
}
/* episodes */
.episode {
  padding: 20px;
  overflow: auto;
  background: -webkit-linear-gradient(top, rgba(45,57,64,1) 0%,rgba(45,57,64,1) 50%,rgba(50,62,71,1) 100%);
}
.episode .scroll {
  overflow: hidden;
}
.episode h3 {
  margin: 10px 0;
	font-size: 16px;	
}
.episode h3 a {
  color: white;
}
.episode .chapter {
  float: left;
  padding: 0 25px 25px 0;
}
.episode .chapter img {
    width: 128px;
    height: 72px;
    border: 1px solid #888;
    overflow: hidden;
}
.episode .chapter h4 {
  position: absolute;
  bottom: 0;
  font-size: 12px;
  color: #CCC;
}
.episode .bookmark {
  top: -2px;
}

/* play view */
.scroll-view,
.scroll-content .scroll,
.scroll-content .scroll .row,
.scroll-content .scroll .col,
.scroll-content .scroll .enrichPanel {
  height: 100%;
}

/* modes */
.mode.has-footer {
    bottom: 49px;
}
.mode.has-footer.has-controls {
    bottom: 89px;
}

/* player */
.player {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background-color: black;
}
.player .video-overlay {
    position: absolute;
    bottom: 0;
    top: 0;
    left: 0;
    right: 0;
    z-index: 12; /* ion-content z-index is 11 */
}
.player video, canvas {
    top: 0;
    left: 0;
    width: 100%;
    max-width: 100%;
    height: auto;
}
.player video {
    height: 100%;
    position: absolute;
}
.player video::-webkit-media-controls {
    display:none !important;
}

.player.explore,
.player.lookup {
    top: inherit;
    bottom: 49px;
    width: inherit;
    height: inherit;
}
.player.explore video,
.player.lookup video {
    height: 150px !important;
    min-height: 150px;
}
.culture .video-logo {
  position: absolute;
  top: 80px;
  margin-left: 40px;
  z-index: 100;
  height: 40px;
  width: 60px;
  background-size: 100% 100%;
  background-image: url(../img/AVRO-logo-wit-transp.png);
  background-repeat: no-repeat;
}
.player-controls {
    width: 100%;
    position: absolute;
    z-index: 13;
    bottom: 49px;
    padding: 1px 16px;
    background-color: rgba(45,57,64,0.8);
    /*background-color: rgba(0,0,0,0.6);*/
    color: white;
}
.player-controls .icon {
    color: #FFF;
}
.player-controls .icon.selected {
    color: rgb(65,146,183);
}

.seekbar {
}
.range {
  padding: 0;
  margin: 0 50px;
}
.range input[type="range"] {
  padding: 0;
  margin: 0;
    height: 28px;
  background-size: 100% 4px;
}
.seekbar .time {
  padding-top: 3px;
}
.seekbar .time.start {
  float: left;
}
.seekbar .time.end {
  float: right;
}
.beam-bg {
    position: absolute;
    top: 44px;
    bottom: 89px;
    width: 100%;
  color: #CCC;
  font-size: 30px;
}
.beam-bg .icon {
    position: absolute;
    width: 100%;
    font-size: 300px;
    text-align: center;
    bottom: 20px;
}
.beam-bg .msg {
    font-size: 16px;
}

/* chapter list */
.chapters-overlay {
    position: absolute;
    width: 200px;
    top: 0;
    bottom: 32px;
    left: 0;
    z-index: 13;
    background-color: rgba(45,57,64,0.8);
}
.chapters {
    /*background-color: rgb(45,57,64);*/
}
.culture .chapters .item img {
    display: block;
}
.chapters .item img {
  display: none;
}

.chapters .item {
  border-width: 0 0 1px;
  border-style: solid;
  border-color: rgb(126,139,148);
  background-color: rgba(45,57,64,0.6);
  color: rgb(230,229,228);
  margin: 0;
}
.chapters .item.active {
  background-color: rgba(126,139,148,0.6);
}
.chapters .bookmark {
  top: 20px;
  right: 25px;
}  
.chapters .chapter h4 {
  margin: 0 0 8px 0;
  font-size: 15px;
  color: #FFF;
}
.chapters img {
    width: 50%;
    border: 1px solid #888;
}

/* links */
.links {
    -webkit-filter: drop-shadow(-7px 0 6px rgba(0, 0, 0, 0.75));
    background-color: rgb(126, 139, 148);
}
.links .list {
    border-top: 1px solid rgb(126,139,148);
}
.links .item-wrapper:first-child .item {
    border-color: rgb(126,139,148);
}
.links .item {
    background-color: rgb(126,139,148);
}
.links .selected .item {
    background-color: rgb(170, 184, 194);
}
.links .item .star {
  position: absolute;
  right: 20px;
  top: 40px;
  color: rgb(65,146,183);
}
.links h3 {
    margin: 0;
    padding: 4px 11px;
    font-size: 15px;
    font-weight: bold;
    text-transform: uppercase;
    height: 34px;
    line-height: 26px;
    color: white;
    background-color: rgb(36,146,185);
    box-sizing: border-box;
    background-image: url(../img/background_sections_menu.png);
    background-position: center right;
    background-repeat: no-repeat;
    -webkit-filter: drop-shadow(0 -3px 3px rgba(50, 50, 50, 0.75));
}
.links h2 {
  /*color: rgb(45,57,64);*/
    color: white;
  font-size: 15px;
}
.links img {
  border: 1px solid white;
}
.links p {
    color: rgb(45,57,64);
    line-height: 18px;
}
.links .item.chapter .desc {
  display: block;
}
.links .item.chapter .bookmark {
  display: none;
}

/* content */
.content {
    background-color: white;
    -webkit-filter: drop-shadow(-7px 0 6px rgba(0, 0, 0, 0.75));
}
.content .scroll-view {
  height: 600px;
}

.information-card {
    padding: 24px 36px
}



/* entity slider */
.entity-bar {
    width: 100%;
    border-bottom: 1px solid rgb(100,114,124);
    height: 103px;
    padding: 4px;
    box-sizing: border-box;
}
.entity-list .entity {
    float: left;
    width: 127px;
    height: 95px;
    overflow: hidden;
    border-width: 2px;
    border-style: solid;
    border-color: rgb(45,57,64);
    font-weight: bold;
    box-sizing: border-box;
}
.entity-list .entity.active {
    border: 4px solid rgb(36,146,185);
    margin-top: -2px;
    height: 99px;
    width: 131px;
    overflow: hidden;
}
.entity-list .entity.active .title {
    overflow: hidden;
}
.entity-list .entity img {
    height: 91px;
    width: 123px;
}
.entity-list .entity .title {
    position: absolute;
    bottom: 0;
    height: 35px;
    width: 123px;
    padding: 2px 4px;
    line-height: 14px;
    background-color:rgba(0,0,0,0.6);
    color: white;
    overflow: hidden;
}

.entity-slider {
    position: absolute;
    bottom: 0;
    top: 103px; /* entity slider compensation */
    left: 0;
    right: 0;
    box-sizing: border-box;
}

.entity-slide {
    height: 100%;
    overflow: auto;
    padding: 15px 15px 0 15px;
    box-sizing: border-box;
}
.entity-slide .row,
.entity-slide .col {
    height: 100%;
}
.entity-slide .box {
    background-color: rgba(95,109,105,0.6);
    border: 1px solid rgb(100,114,124);
    padding: 15px;
    box-sizing: border-box;
}
.entity-slide .image-wrapper {
    height: 75%;
    padding-bottom: 15px;
    box-sizing: border-box;
}
.entity-slide .box.image {
    padding: 0;
    height: 100%;
}
.entity-slide .box.title {
    height: 25%;
    overflow: hidden;
}
.entity-slide .left {
    margin-right: 15px;
    box-sizing: border-box;
}
.entity-slide .image img {
    width: 100%;
    max-height: 100%;
}
.entity-slide h2 {
    color: rgb(36,146,185);
    text-transform: uppercase;
    margin: 0;
    padding: 0;
}
.entity-slide .text {
    height: 100%;
    overflow: hidden;
}
.entity-slide .types {
    margin: 0;
    color: rgb(170,184,194);
}
.entity-slide .description {
    color: rgb(170,184,194);
    font-size: 24px;
    line-height: 32px;
}
.entity-slide .attributes {
    margin-top: 10px;
    font-size: 20px;
    line-height: 28px;
}
.entity-slide .attributes .value {
    color: rgb(170,184,194);
}
.entity-slide .attributes .key {
    color: rgb(36,146,185);
}


/* admin */
.admin pre {
    padding: 10px;
    background-color: white;
    border: 1px solid #cccccc;
}

/* browser */
.browser {
  height: 100%;
}
.browser iframe {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  padding-top: 30px;
  border: none;
  overflow: auto;
}
.browser header {
  background-color: rgb(65,146,183);
  margin: 0;
  padding: 2px 8px;
  font-size: 12px;
  font-weight: bold;
  color: white;
  line-height: 28px;
  position: relative;
  z-index: 1;
}
.browser .close {
  float: right;
}

